# AruBot

./: .gitignore  README.md  file.txt  main.py  pyproject.toml
Tools/: dataSciTools.py  tools.py  webTools.py
